[package]
name = "htmlgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2"

[dev-dependencies]
chrono = "0.4"
lipsum = "0.8"
rand = "0.8"
slugmin = "1.0"
inflector = {package = "Inflector", version = "0.11"}
